# watertempcpp

./: CMakeLists.txt  CMakeUserPresets.json
src/: WxWatertemp.cpp  WxWatertemp.h  main.cpp
